Fix tags on narrow screens

--- a/css/blog.css
+++ b/css/blog.css
@@ -47,21 +47,24 @@ body>main>article>footer {
 	background: var(--elements-background-darker);
 	border-radius: 0 0 1ch 1ch;
 	padding: 0.8ch;
+	display: grid;
+	grid-template-columns: 1fr auto;
+	grid-template-areas: "tags social";
 }
 
-body>main>article>footer>div {
-	display: inline-block;
-}
-
-body>main>article>footer ul, body>main>article>footer>section, body>main>article>footer ul.tags>li {
+body>main>article>footer>* * {
 	display: inline;
 }
 
 body>main>article ul.tags li {
-	margin: 0 1ch;
+	margin: 0 0.4ch;
 }
 
-body>main>article>footer ul.icon_list {
-	float: right;
+body>main>article>footer .tag_container {
+	area: tags;
+}
+
+body>main>article>footer .icon_list {
+	area: social;
 }
 
